--- a/css_folder/style.css
+++ b/css_folder/style.css
@@ -17,6 +17,38 @@ body {
     flex-wrap: wrap;
 }
 
+/*----------
+Hero
+------------*/
+
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img_folder/Mist.jpg");
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+
+/*----------
+End of Hero
+-----------*/
+
 
 h1 {
     font-family: 'Special Elite', cursive, Arial, Helvetica, sans-serif;
@@ -30,7 +62,7 @@ h1 {
 h2 {
     font-family: 'Special Elite', cursive, Arial, Helvetica, sans-serif;
     color: white;
-    font-size: 45px;
+    font-size: 25px;
 }
 
 h3 {
@@ -44,7 +76,9 @@ p {
     font-size: 16px;
 }
 
-
+table {
+    width: 250px;
+}
 
 table, th, td {
     border: 1px solid white;
@@ -61,7 +95,7 @@ button#hamburgerBtn {
 }
 
 nav {
-    background-color: #ff2222;
+    background-color: #116530;
     display:flex;
     flex-wrap: wrap;
 }
@@ -84,7 +118,7 @@ nav a {
 }
 
 nav li.active {
-    background-color: rgba( 0, 0, 0, .5);
+    background-color: rgba( 0, 0, 0, .3);
 }
 
 nav a:hover {
@@ -99,15 +133,58 @@ nav ul {
     display: none;
 }
 
+.box {
+    width: 200px;
+    height: 100px;
+    background-color: #aaa;
+    margin: 5px 10px;
+}
+
+.test {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.classList {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.rpgClass {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    justify-content: center;
+
+}
+
+#demo {
+    background-color: white;
+    color: black;
+    width: 35px;
+    padding: 5px;
+}
+
+.mainContent{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    margin: 25px 10px;
+}
+
 /*---------------
 The CSS Animation
 -----------------*/
 .wrapper {
-    height: 200px;
+    height: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 21px;
+    margin: 100px;
 }
 
 .red {
@@ -205,31 +282,27 @@ The CSS Animation
 End of CSS Animation
 -----------------*/
 
-.box {
-    width: 200px;
-    height: 100px;
-    background-color: #aaa;
-    margin: 5px 10px;
+button {
+    height: 44px;
+    width: 65px;
 }
 
-.test {
-    display: flex;
-    flex-wrap: wrap;
+.choiceBtn {
+    width: 100px;
+    margin: 25px;
 }
 
-.classList {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+div#blacksmith {
+    display: none;
 }
 
-.rpgClass {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    justify-content: center;
+div#forestLose {
+    display: none;
+}
 
+footer {
+    display: flex;
+    border: 100px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -251,6 +324,10 @@ End of CSS Animation
     nav a {
         padding: 10px;
     }
+
+    .hero-image {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img_folder/ForestMed.jpeg");
+    }
 }
 
 
@@ -268,6 +345,9 @@ End of CSS Animation
         padding: .7rem 1rem;
     }
  
+    .hero-image {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img_folder/Forest.jpg");
+    }
 
     
 
