--- a/css_folder/style.css
+++ b/css_folder/style.css
@@ -24,6 +24,8 @@ Hero
 body, html {
     height: 100%;
     margin: 0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .hero-image {
@@ -148,7 +150,7 @@ nav ul {
 .classList {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: left;
 }
 
 .rpgClass {
@@ -173,6 +175,8 @@ nav ul {
     flex-direction: column;
     justify-content: center;
     margin: 25px 10px;
+    padding: 5px;
+    
 }
 
 /*---------------
@@ -298,6 +302,37 @@ div#blacksmith {
 
 div#forestLose {
     display: none;
+}
+
+div#goblinsWin {
+    display: none;
+    background-color: darkred;
+}
+
+div#playerWins {
+    display: none;
+}
+
+div#intoTheWoods {
+    display: none;
+}
+
+div#intoCave {
+    display: none;
+}
+
+div#lookAround {
+    display: none;
+}
+
+div#playerDiesCave {
+    display: none;
+    background-color: darkred;
+}
+
+div#playerWinsCave {
+    display: none;
+    background-color: rgb(80, 155, 180);
 }
 
 footer {
