--- a/css_folder/style.css
+++ b/css_folder/style.css
@@ -17,6 +17,10 @@ body {
     flex-wrap: wrap;
 }
 
+main p {
+    padding: 20px;
+
+}
 /*----------
 Hero
 ------------*/
@@ -208,26 +212,26 @@ The CSS Animation
     margin: 100px;
 }
 
-.red {
+.darkgreen {
     width: 80px;
     height: 80px;
-    background: orangered;
+    background: darkgreen;
 }
 
-.orange {
+.green {
     width: 60px;
     height: 60px;
-    background: orange;
+    background: green;
 }
 .gold {
     width: 45px;
     height: 45px;
-    background: gold;
+    background: lightblue;
 }
 .white {
     width: 35px;
     height: 35px;
-    background: lightyellow;
+    background: white;
 }
 
 .flame-wrapper {
@@ -240,7 +244,7 @@ The CSS Animation
     border-radius: 50% 0% 50% 50%;
 }
 
-.orange {
+.green {
     left:10px;
 }
 
@@ -256,12 +260,12 @@ The CSS Animation
     transform: rotate(-45deg);
 }
 
-.red {
-    box-shadow: 0px 0px 10px 5px orangered;
+.darkgreen {
+    box-shadow: 0px 0px 10px 5px darkgreen;
 }
 
-.orange {
-    box-shadow: 0px 0px 12px 6px orange;
+.green {
+    box-shadow: 0px 0px 12px 6px green;
 }
 
 .gold {
@@ -269,7 +273,7 @@ The CSS Animation
 }
 
 .white {
-    box-shadow: 0px 0px 9px 4px lightyellow;
+    box-shadow: 0px 0px 9px 4px white;
 }
 
 .blue {
@@ -281,7 +285,7 @@ The CSS Animation
 }
 
 .base {
-    border-radius: 50%;
+    border-radius: 55%;
     position: absolute;
 }
 
